# office-auto

./: LICENSE  README.md  pyproject.toml  run_crawler.py
src/office_auto/: __init__.py  cnki_crawler.py  cnki_crawler_improved.py  config.py  example.py  example_improved.py
tests/: test_crawler.py
